add README.md && configuring optimist

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "googleapis":"*",
     "express":"*",
-    "cookieparser":"*"
+    "cookieparser":"*",
+    "optimist":"*"
   }
 }
